Cycles: Refraction Node return Black (Sharp mode) #40561

Closed
opened 2014-06-10 11:26:41 +02:00 by Sebastian Röthlisberger · 8 comments

System Information
Operating system and graphics card
osx 10.9.3

Blender Version
Broken: e8c63ca
Worked: (optional)

Short description of error
Cycles Refraction Node is not working - it outputs Black only.

Exact steps for others to reproduce the error
Set Renderer to Cycles
Add Material
Set to Refraction
Set Distribution to Sharp
Render

**System Information** Operating system and graphics card osx 10.9.3 **Blender Version** Broken: e8c63ca Worked: (optional) **Short description of error** Cycles Refraction Node is not working - it outputs Black only. **Exact steps for others to reproduce the error** Set Renderer to Cycles Add Material Set to Refraction Set Distribution to Sharp Render

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @SebastianRothlisberger

Added subscriber: @SebastianRothlisberger

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Added subscriber: @willi-2

Added subscriber: @willi-2

Confirmed on Win7/64. Test file: #40561.blend
However, I didn't find any older Blender version that worked - do I/we missunderstand the shader?

Confirmed on Win7/64. Test file: [#40561.blend](https://archive.blender.org/developer/F93757/T40561.blend) However, I didn't find any older Blender version that worked - do I/we missunderstand the shader?

This issue was referenced by fb6cb25c1c

This issue was referenced by fb6cb25c1c8797d239ca8f6c5d775eef50cc801f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit fb6cb25c1c.

Closed by commit fb6cb25c1c.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40561
No description provided.