Fix T40561: cycles refraction node with sharp distribution gives black.